@startuml

title __TESTING's Class Diagram__\n

  namespace connection {
    class connection.DAOTest {
    }
  }
  

  namespace connection {
    class connection.DBConnect {
    }
  }
  

  namespace model {
    abstract class model.Colleague {
    }
  }
  

  namespace model {
    class model.Editor {
    }
  }
  

  namespace model {
    interface model.Mediator {
    }
  }
  

  namespace model {
    class model.Question {
    }
  }
  

  namespace model {
    class model.Viewer {
    }
  }
  

  namespace model {
    class model.Worker {
    }
  }
  

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  model.Colleague o-- model.Mediator : mediator
  model.Colleague o-- model.Question : receivedMessage
  model.Editor -up-|> model.Colleague
  model.Viewer -up-|> model.Colleague
  model.Worker -up-|> model.Colleague
  sample.Controller .up.|> javafx.fxml.Initializable
  sample.Controller .up.|> model.Mediator
  sample.Controller o-- model.Question : baseTest
  sample.Controller o-- model.Colleague : currentColleague
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
